# vcamnamer

./: .gitignore  README.md  pyproject.toml
tests/: test_device_detector.py  test_mapping_store.py  test_rule_applier.py
vcamnamer/: __init__.py  __main__.py  device_detector.py  gui.py  mapping_store.py  rule_applier.py
